# udacity-cv-assignment2

./: 0_Dataset.ipynb  1_Preliminaries.ipynb  2_Training.ipynb  3_Inference.ipynb  4_Zip Your Project Files and Submit.ipynb  data_loader.py  main.py  model.py  pyproject.toml  training_log.txt  vocab.pkl  workspace_utils.py
