[tool.uv]
required-version = ">=0.7.19,<0.8.0"
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
pycocotools = { git = "https://github.com/philferriere/cocoapi.git", subdirectory = "PythonAPI" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[project]
name = "udacity-cv-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "cython>=3.1.2",
    "matplotlib>=3.10.3",
    "nltk==3.8.1",
    "numpy==1.24.3",
    "pycocotools",
    "scikit-image>=0.25.2",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.0.1",
    "torchvision==0.15.2",
]
cu128 = [
    "torch==2.0.1",
    "torchvision==0.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
